<resources>
    <string name="app_name">QA Pragyan \'17</string>
    <string name="Username">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="assistance_provided_by_the_volunteers">Assistance provided by the volunteers</string>
    <string name="would_you_be_interested_in_visiting_pragyan_18">Would you be interested in visiting Pragyan \'18 ?</string>
    <string name="overall_rating_of_the_workshop">Overall rating of the workshop</string>
    <string name="quality_of_kits_software_provided_during_the_workshop_if_applicable">Quality of kits/software provided during the workshop(if applicable)</string>
    <string name="value_for_money_of_the_workshop">Value for money of the workshop</string>
    <string name="ease_of_understanding_workshop_instructions">Ease of understanding workshop instructions</string>
    <string name="yes">Yes</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="how_did_you_get_to_know_about_pragyan">How did you get to know about Pragyan?</string>
    <string name="overall_rating_of_pragyan_17">Overall rating of Pragyan \'17</string>
    <string name="accessibility_of_pragyan_website_and_app">Accessibility of Pragyan website and app</string>
    <string name="assistance_provided_by_volunteers">Assistance provided by volunteers</string>
    <string name="ambience_of_the_fest">Ambience of the fest</string>
    <string name="organization_of_the_fest">Organization of the fest</string>
    <string name="ok">OK</string>
    <string name="pin">Pin :</string>
</resources>
