<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.rakesh.qapragyan17.GeneralActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/form_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/question_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:text="@string/organization_of_the_fest"
                android:textSize="@dimen/activity_text_size" />

            <RatingBar
                android:id="@+id/q1_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/question_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/q1_rating"
                android:layout_marginTop="20dp"
                android:text="@string/ambience_of_the_fest"
                android:textSize="@dimen/activity_text_size" />

            <RatingBar
                android:id="@+id/q2_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/question_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/q2_rating"
                android:layout_marginTop="20dp"
                android:text="@string/assistance_provided_by_volunteers"
                android:textSize="@dimen/activity_text_size" />

            <RatingBar
                android:id="@+id/q3_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/question_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/q3_rating"
                android:layout_marginTop="20dp"
                android:text="@string/accessibility_of_pragyan_website_and_app"
                android:textSize="@dimen/activity_text_size" />

            <RatingBar
                android:id="@+id/q4_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/question_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/q4_rating"
                android:layout_marginTop="20dp"
                android:text="@string/overall_rating_of_pragyan_17"
                android:textSize="@dimen/activity_text_size" />

            <RatingBar
                android:id="@+id/q5_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_5"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/question_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/q5_rating"
                android:layout_marginTop="20dp"
                android:text="@string/how_did_you_get_to_know_about_pragyan"
                android:textSize="@dimen/activity_text_size" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_6"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/spinner"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:background="@color/color_default"
                android:text="@string/submit" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
