<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.rakesh.qapragyan17.WorkshopsActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/form_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:text="@string/enter_your_phone_number"
                android:textSize="@dimen/activity_text_size" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/phone_text"
                android:layout_alignStart="@id/phone_text"
                android:layout_below="@+id/phone_text"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="14dp"
                android:ems="10"
                android:inputType="phone"
                android:textSize="@dimen/activity_text_size" />

            <TextView
                android:id="@+id/question_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/phone_number"
                android:layout_marginTop="20dp"
                android:text="@string/assistance_provided_by_the_volunteers"
                android:textSize="@dimen/activity_text_size" />

            <RatingBar
                android:id="@+id/q1_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/question_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/q1_rating"
                android:layout_marginTop="20dp"
                android:text="@string/ease_of_understanding_workshop_instructions"
                android:textSize="@dimen/activity_text_size" />

            <RatingBar
                android:id="@+id/q2_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/question_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/q2_rating"
                android:layout_marginTop="20dp"
                android:text="@string/value_for_money_of_the_workshop"
                android:textSize="@dimen/activity_text_size" />

            <RatingBar
                android:id="@+id/q3_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/question_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/q3_rating"
                android:layout_marginTop="20dp"
                android:text="@string/quality_of_kits_software_provided_during_the_workshop_if_applicable"
                android:textSize="@dimen/activity_text_size" />

            <RatingBar
                android:id="@+id/q4_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/question_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/q4_rating"
                android:layout_marginTop="20dp"
                android:text="@string/overall_rating_of_the_workshop"
                android:textSize="@dimen/activity_text_size" />

            <RatingBar
                android:id="@+id/q5_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_5"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/question_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/q5_rating"
                android:layout_marginTop="20dp"
                android:text="@string/would_you_be_interested_in_visiting_pragyan_18"
                android:textSize="@dimen/activity_text_size" />

            <Switch
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_6"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/activity_text_size" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/checkbox"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:background="@color/color_default"
                android:text="@string/submit" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
